--- a/myproject/cfg/config.yml
+++ b/myproject/cfg/config.yml
@@ -1,7 +1,7 @@
 sqlite:
   host: localhost
   user: root
-  passwd: root
+  passwd: ****
   db: db.sqlite3
 other:
   email_from: "michele.dinanni1@gmail.com"
