--- a/myproject/cfg/config.yml
+++ b/myproject/cfg/config.yml
@@ -1,8 +1,10 @@
 sqlite:
   host: localhost
   user: root
-  passwd: ****
+  passwd: **** 
   db: db.sqlite3
-other:
-  email_from: "michele.dinanni1@gmail.com"
-  passwd: *****
+email:
+  email_from: "collab.uniba@gmail.com"
+  passwd: ****
+security:
+  secret_key: 'secret'
