--- a/myproject/cfg/config.yml
+++ b/myproject/cfg/config.yml
@@ -7,4 +7,4 @@ email:
   email_from: "collab.uniba@gmail.com"
   passwd: secret
 security:
-  secret_key: 'secret'
+  secret_key: '=-z@=s3n*-dk=j4h9&r9u*ns*(c&o$6(+xv9g4v2sydkm5lk=^'
